# kr_autonomous_flight

./: .clang-format  .cmake-format.yaml  .gitignore  .pylintrc-reviewdog  LICENSE.txt  README.md  ROS2_MIGRATION_REPORT.md  autonomy_stack_repos.yaml  autonomy_stack_repos.yml  environment.yml  exp_usage.md  external.yaml  external_all.yaml  external_coverage_planner.yaml  external_lidar_odometry.yaml  external_real_robot.yaml  test.sh
autonomy_core/client/client_launch/: CMakeLists.txt  package.xml
autonomy_core/client/kr_rviz_plugins/: CMakeLists.txt  package.xml
autonomy_core/client/rqt_quadrotor_safety/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
autonomy_core/control/control_launch/: CMakeLists.txt  package.xml
autonomy_core/estimation/estimation_launch/: CMakeLists.txt  package.xml
autonomy_core/estimation/fla_ukf/: CMakeLists.txt  package.xml
autonomy_core/interface/mavros_interface/: CMakeLists.txt  package.xml
autonomy_core/interface/px4_interface_launch/: CMakeLists.txt  README.txt  package.xml
autonomy_core/map_plan/action_planner/: CMakeLists.txt  README.md  package.xml
autonomy_core/map_plan/coverage_utils/: CMakeLists.txt  package.xml
autonomy_core/map_plan/jps3d/: CMakeLists.txt  README.md  package.xml
autonomy_core/map_plan/map_plan_launch/: CMakeLists.txt  package.xml
autonomy_real/real_experiment_launch/: CMakeLists.txt  package.xml
autonomy_real/real_experiment_launch/config/: msckf_calib.yaml  so3_control_gains.yaml  tracker_params.yaml  trackers.yaml
autonomy_real/real_experiment_launch/launch/: drivers_for_faster_lio.launch  drivers_for_faster_lio.launch.py  faster_lio_for_autonomy.launch  faster_lio_for_autonomy.launch.py  full_autonomy.launch  full_autonomy.launch.py  full_autonomy_for_GUI.launch  full_autonomy_with_llol.launch  full_sensors_faster_lio.launch  full_sensors_faster_lio.launch.py  llol_for_autonomy.launch  llol_with_robot_ns.launch  mavros.launch  max_seam_sensors.launch  max_seam_sensors.launch.py  os1_robot_ns.launch  ouster_decoder.launch  ouster_decoder.launch.py  publish_tf-for-robot-rhea.launch  publish_tf.launch  publish_tf.launch.py  px4.launch  px4.launch.py  record_bag.launch  record_bag.launch.py  record_bag_ca_trip.launch  record_bag_max_seam.launch  relay_lidar.launch  relay_ovc.launch.py  run_faster_lio_with_bag.launch  run_faster_lio_with_bag.launch.py  static_tf_vision_world.launch  throttle_imu.launch  throttle_map_odom.launch  throttle_map_odom.launch.py
autonomy_real/real_experiment_launch/util/: convert_multicam_calib_to_msckf.py
calibration/calibration_launch/: package.xml
calibration/calibration_launch/launch/: calibration.launch
estimation/estimation_launch/: CMakeLists.txt  package.xml
estimation/estimation_launch/config/: msckf_calib.yaml  msckf_calib_2021-07-24-from-kalibr.yaml  msckf_calib_simulation.yaml  ovc-2021-08-02-10-38-18.yaml
estimation/estimation_launch/launch/: estimation.launch  msckf_imgproc.launch
map_plan/jps3d/: CMakeLists.txt  Doxyfile
map_plan/jps3d/docs/: annotated.html  classDMP_1_1GraphSearch-members.html  classDMP_1_1GraphSearch.html  classDMPlanner-members.html  classDMPlanner.html  classIterativeDMPlanner-members.html  classIterativeDMPlanner.html  classJPSPlanner-members.html  classJPSPlanner.html  classJPS_1_1GraphSearch-members.html  classJPS_1_1GraphSearch.html  classJPS_1_1MapUtil-members.html  classJPS_1_1MapUtil.html  classJPS_1_1Timer-members.html  classJPS_1_1Timer.html  classMapReader-members.html  classMapReader.html  classes.html  data__type_8h.html  data__type_8h_source.html  data__utils_8h.html  data__utils_8h_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_16f9237c2eb6ee71ebe7bb5d56514662.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_35cd4ee7ff6c8bd90084e84f08e68c51.html  dir_3fa5b8fa885cd79655872b42aca83d9a.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5280bb524ed5294135fd93e0b12dbd44.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6810188cd2ea088282d3e2870d3170c6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_78791bf993c4f7547ae15e7c34d4eefe.html  dir_7f7e439ba0927089503219129b4cf038.html  dir_a41afb44cd77021f04ef0298981be91e.html  dir_a573004c1aa1ac4f8bc48460229ea7de.html  dir_cf779efadf30e9c7d82da7dbe2eb33f7.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e3f696d4d044a5899bff98f450f72b77.html  dir_f3f15cb6a903102cfaa3bed9fef4749a.html  (+34 more)
map_plan/jps3d/src/: graph_search.cpp  jps_planner.cpp
map_plan/jps3d/test/: create_map.cpp  read_map.hpp  test_distance_map_planner_2d.cpp
map_plan/map_plan_launch/: CMakeLists.txt  package.xml
map_plan/map_plan_launch/config/: mapper.yaml  mapper_3d.yaml  mapper_backup_perch.yaml  mapper_non_polypixel.yaml  mapper_polypixel.yaml
map_plan/map_plan_launch/launch/: map_plan.launch  mapper.launch  mp_planner.launch
map_plan/mpl/: CMakeLists.txt  Doxyfile
map_plan/mpl/docs/: annotated.html  classLambda-members.html  classLambda.html  classLambdaSeg-members.html  classLambdaSeg.html  classMPL_1_1GraphSearch-members.html  classMPL_1_1GraphSearch.html  classMPL_1_1MapPlanner-members.html  classMPL_1_1MapPlanner.html  classMPL_1_1MapUtil-members.html  classMPL_1_1MapUtil.html  classMPL_1_1PlannerBase-members.html  classMPL_1_1PlannerBase.html  classMPL_1_1env__base-members.html  classMPL_1_1env__base.html  classMPL_1_1env__map-members.html  classMPL_1_1env__map.html  classPolySolver-members.html  classPolySolver.html  classPolyTraj-members.html  classPolyTraj.html  classPrimitive-members.html  classPrimitive.html  classPrimitive1D-members.html  classPrimitive1D.html  classTrajSolver-members.html  classTrajSolver.html  classTrajectory-members.html  classTrajectory.html  classes.html  control_8h.html  control_8h_source.html  data__type_8h.html  data__type_8h_source.html  dir_18db0b624df0e109f95d6cefe19b481c.html  (+106 more)
map_plan/planning_ros_msgs/: CMakeLists.txt  package.xml
map_plan/traj_opt_ros/: CMakeLists.txt
real_world/publish_car_det/: package.xml
state_machine/fla_state_machine/: CMakeLists.txt  package.xml
(+1267 files in other folders)
