<?xml version="1.0"?>
<package format="2">
  <name>publish_car_det</name>
  <version>0.0.0</version>
  <description>The publish_car_det package</description>

  <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
