<?xml version="1.0"?>
<package format="2">
  <name>fla_state_machine</name>
  <version>0.0.0</version>
  <description>The fla_state_machine package</description>

  <maintainer email="mike@todo.todo">mike</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>action_planner</depend>
  <depend>action_trackers</depend>
  <depend>actionlib</depend>
  <depend>tf2_ros</depend>
  <depend>actionlib_msgs</depend>
  <depend>kr_mav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>

  <depend>traj_opt_ros</depend>
  <depend>planning_ros_utils</depend>
  <depend>planning_ros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>smach_ros</depend>



  <export>
  </export>
</package>
