<?xml version="1.0"?>
<package>
    <name>client_launch</name>
    <version>0.0.0</version>
    <description>The client_launch package</description>

    <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
    <maintainer email="fclad@seas.upenn.edu">Fernando Cladera</maintainer>
    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

    <license>Penn Software License</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
