<package format="2">
  <name>kr_rviz_plugins</name>
  <version>0.1.0</version>
  <description>
     Quadrotor plugins for RViz.
  </description>
  <maintainer email="tdineshd@gmail.com">Dinesh Thakur</maintainer>
  <license>BSD</license>

  <author>Dinesh Thakur</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>rosbag</depend>
  <depend>planning_ros_msgs</depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
    <rviz plugin="${prefix}/waypoint_nav_plugin_description.xml"/>
    <!--<rviz plugin="${prefix}/camera_plugin_description.xml"/> -->
  </export>
</package>
