<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_quadrotor_safety</name>
  <version>0.1.0</version>
  <description>Provides a GUI plugin for MAV Manager.</description>
  <maintainer email="ablasdel@gmail.com">Dinesh Thakur</maintainer>

  <license>Penn Software License</license>

  <url type="website">http://ros.org/wiki/rqt_quadrotor_safety</url>
  <url type="repository">https://github.com/KumarRobotics/kr_ui</url>

  <author>Dinesh Thakur</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>python_qt_binding</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>kr_planning_msgs</depend>
  <depend>kr_mav_msgs</depend>
  <depend>tf_transformations</depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
