<?xml version="1.0"?>
<package>
    <name>control_launch</name>
    <version>0.0.0</version>
    <description>The control_launch package</description>

    <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
    
    <license>Penn Software License</license>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
