<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_launch</name>
  <version>0.0.1</version>
  <description>The control_launch package</description>
  <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <license>Penn Software License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>kr_mav_manager</exec_depend>
  <exec_depend>kr_trackers_manager</exec_depend>
  <exec_depend>kr_mav_controllers</exec_depend>
  <exec_depend>kr_trackers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
