<?xml version="1.0"?>
<package format="2">
  <name>fla_ukf</name>
  <version>0.0.0</version>
  <description>The fla_ukf package</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <license>Penn Software License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>eigen_conversions</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>angles</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
