<package format="2">
  <name>mavros_interface</name>
  <version>1.0.0</version>
  <description>mavros_interface</description>
  <maintainer email="anurag.makineni@gmail.com">Anurag Makineni</maintainer>
  <maintainer email="JustinThomas@jtwebs.net">Justin Thomas</maintainer>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>

  <license>Penn Software License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kr_mav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
