<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavros_interface</name>
  <version>1.0.0</version>
  <description>mavros_interface</description>
  <maintainer email="anurag.makineni@gmail.com">Anurag Makineni</maintainer>
  <maintainer email="JustinThomas@jtwebs.net">Justin Thomas</maintainer>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <license>Penn Software License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kr_mav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
