<?xml version="1.0"?>
<package>
    <name>px4_interface_launch</name>
    <version>0.0.0</version>
    <description>The px4_interface_launch package</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>
    <maintainer email="chenste@seas.upenn.edu">steven</maintainer>

    <license>Penn Software License</license>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>