<?xml version="1.0"?>
<package format="2">
  <name>action_planner</name>
  <version>0.0.0</version>
  <description>The action_planner package</description>

  
  <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
  <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  
  <license>Penn Software License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>mapper</depend>
  <depend>jps3d</depend>
  <depend>kr_planning_rviz_plugins</depend>
  <depend>kr_planning_msgs</depend>
  <depend>traj_opt_ros</depend>
  <depend>motion_primitive_library</depend>

  <export>
  </export>
</package>
